--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Rock Paper Scissors</title>
-        <script src="./script.js"></script>
     </head>
     <body>
-        
+        <div id="container">
+        </div>
+
+        <script src="./script.js"></script>
     </body>
 </html>
