Add styles and refactor code for game logic

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Rock Paper Scissors</title>
+        <link href="styles.css" rel="stylesheet"></link>
     </head>
     <body>
-        <div id="container">
+        <div class="container">
+            <div class="btnContainer"></div>
+            <div class="results"></div>
         </div>
 
         <script src="./script.js"></script>
