Implement game function and update UI to display game running scores

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     </head>
     <body>
         <div class="container">
+            <div class="scores">
+                <p>You: <span class="userScore"></span></p>
+                <p>Computer: <span class="computerScore"></span> </p>
+            </div>
             <div class="btnContainer"></div>
             <div class="results"></div>
         </div>
