Add disabling button feature

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </div>
             <div class="btnContainer"></div>
             <div class="results"></div>
+            <div class="winner"></div>
         </div>
 
         <script src="./script.js"></script>
